# MRT-Station

./: .gitignore  Cargo.toml  README.md  SECURITY.md  release.sh
.github/workflows/: ci.yml  release.yml
apps/em-agent/: Cargo.toml
apps/em-agent/src/: config.rs  main.rs  server.rs  state.rs
apps/em-agent/tests/: e2e.rs  ipc.rs
apps/station/: index.html  package-lock.json  package.json  vite.config.ts
apps/station/src/: App.tsx  api.ts  styles.css  types.ts
apps/station/src-tauri/: Cargo.toml  tauri.conf.json
apps/station/src-tauri/src/: lib.rs  main.rs
crates/em-backend/: Cargo.toml
crates/em-backend/src/: lib.rs
crates/em-core/: Cargo.toml
crates/em-core/src/: error.rs  lib.rs  model.rs  redaction.rs
crates/em-device/: Cargo.toml
crates/em-device/src/: lib.rs  production.rs  protocol.rs
crates/em-protocol/: Cargo.toml
crates/em-protocol/src/: lib.rs
docs/: BASELINE.md  PRODUCTION_ADAPTERS.md
packaging/linux/: 70-em-station.rules  agent.env.example  devices.json.example  em-agent.service  em-station.tmpfiles
packaging/windows/: install-service.ps1  uninstall-service.ps1
