[workspace]
resolver = "2"
members = [
  "crates/em-core",
  "crates/em-protocol",
  "crates/em-device",
  "crates/em-backend",
  "apps/em-agent",
  "apps/station/src-tauri",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Proprietary"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.5"
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rusb = { version = "0.9", features = ["vendored"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = { version = "4.7", default-features = false }
thiserror = "2.0"
time = "=0.3.44"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
