[package]
name = "em-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
em-core = { path = "../em-core" }
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true

